Remove redundant 'actually' from theory section intro

--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
             <h2 class="theory-title">WHY THIS APPROACH</h2>
             
             <div class="theory-intro">
-                These four steps aren't arbitrary. They're built on decades of research into how humans actually think and how organizations actually learn.
+                These four steps aren't arbitrary. They're built on decades of research into how humans think and how organizations learn.
             </div>
 
             <div class="theory-grid">
