Remove remaining 'actually' instances from theory closing paragraph

--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
             </div>
 
             <div class="theory-intro" style="margin-top: 3rem;">
-                <strong>This is why Thought Architecture works.</strong> The four steps map to how humans actually think and how organizations actually create knowledge. They work because they're built on what's real—decades of research into cognition, decision-making, and expertise—applied to the specific challenge we're facing now: making human-AI collaboration actually work.<br><br>
+                <strong>This is why Thought Architecture works.</strong> The four steps map to how humans think and how organizations create knowledge. They work because they're built on what's real—decades of research into cognition, decision-making, and expertise—applied to the specific challenge we're facing now: making human-AI collaboration work.<br><br>
                 That's the difference between systems that sound good and systems that deliver.
             </div>
 
