--- a/reading.html
+++ b/reading.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Required Reading - THOUGHT ARCHITECTURE™</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         :root {
             --pink: #DCA1A1;
