--- a/index.html
+++ b/index.html
@@ -1124,29 +1124,31 @@
         const sections = document.querySelectorAll('section[id]');
         const navLinks = document.querySelectorAll('.nav-link');
 
-        const navObserverOptions = {
-            threshold: 0.2,
-            rootMargin: '-100px 0px -66% 0px'
-        };
+        function updateActiveNav() {
+            const scrollPos = window.scrollY + 200; // offset for fixed nav
 
-        const navObserver = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    const id = entry.target.getAttribute('id');
-                    // Remove active from all links
-                    navLinks.forEach(link => link.classList.remove('active'));
-                    // Add active to matching link
-                    const activeLink = document.querySelector(`.nav-link[href="#${id}"]`);
-                    if (activeLink) {
-                        activeLink.classList.add('active');
-                    }
+            let currentSection = '';
+            sections.forEach(section => {
+                const sectionTop = section.offsetTop;
+                const sectionHeight = section.offsetHeight;
+
+                if (scrollPos >= sectionTop && scrollPos < sectionTop + sectionHeight) {
+                    currentSection = section.getAttribute('id');
                 }
             });
-        }, navObserverOptions);
 
-        sections.forEach(section => {
-            navObserver.observe(section);
-        });
+            navLinks.forEach(link => {
+                link.classList.remove('active');
+                if (link.getAttribute('href') === `#${currentSection}`) {
+                    link.classList.add('active');
+                }
+            });
+        }
+
+        // Update on scroll
+        window.addEventListener('scroll', updateActiveNav);
+        // Update on load
+        updateActiveNav();
 
     </script>
 </body>
